[backend]: added first map endpoint: /map/events which represents emergency events
